<resources>
    <string name="app_name">Prayer</string>
    <string name="dia1">Siempre que oramos por ustedes, damos gracias a Dios, el Padre de nuestro Señor Jesucristo, pues hemos recibido noticias de su fe en Cristo Jesús y del amor que tienen por todos los santos a causa de la esperanza reservada para ustedes en el cielo. De esta esperanza ya han sabido por la palabra de verdad, que es el evangelio que ha llegado hasta ustedes. Este evangelio está dando fruto y creciendo en todo el mundo, como también ha sucedido entre ustedes desde el día en que supieron de la gracia de Dios y la comprendieron plenamente. Colosenses 1:3-6\n\n Señor nuestro Dios, alabamos tu nombre, porque podemos dar testimonio de lo que vemos y oímos, de todo el bien que nos has dado. Que estemos unidos con firmeza y fidelidad, esperando el día glorioso cuando tu mano todopoderosa prevalezca en victoria y ponga fin a tantos males entre nosotros. Ese día serás alabado a lo largo de todas las naciones y todo se revestirá de lo nuevo, para la gloria de tu gran nombre. Amén.</string>
    <string name="dia2">Estén siempre alegres, oren sin cesar, den gracias a Dios en toda situación, porque esta es su voluntad para
        ustedes en Cristo Jesús. 1 Tesalonicenses 5:16-18\n\n

Padre que estás en el cielo, te damos gracias porque podemos sentir tu guía, tu señorío, porque en Cristo nos has bendecido con todo don espiritual y celestial. Te agradecemos que podemos estar entre aquellos que siempre reciben verdadera vida nueva, entre quienes te alaban y glorifican; jubilosos aun en los días difíciles. Porque es precisamente en los días difíciles que necesitamos ser de los que son alegres y agradecidos, que siempre encuentran una nueva certeza en sus vidas. Con ellos podemos experimentar el bien que tú das en la tierra, para que la humanidad sea bendecida y venga por fin a tus manos. Amén.</string>
    <string name="dia3">Esa luz verdadera, la que alumbra a todo ser humano, venía a este mundo. El que era la luz ya estaba en el
        mundo, y el mundo fue creado por medio de él, pero el mundo no lo reconoció. Vino a lo que era suyo, pero los suyos no lo
        recibieron. Mas a cuantos lo recibieron, a los que creen en su nombre, les dio el derecho de ser hijos de Dios. Juan 1:9-12\n\n

Amado Padre que estás en el cielo, te damos gracias que podemos ser tus hijos. Te agradecemos por darnos tu Espíritu, para ser verdaderamente hijos tuyos. Reúnenos en comunión contigo, para que nuestra mente y corazón, y todo dentro de nosotros, se dé cuenta de la alegría que podemos recibir por medio de tus dones. Aunque el mundo de hoy está en confusión, duda y perdido en las cosas materiales, danos la serenidad interior para recibir de ti el poder de la fe. Porque por medio de la fe podemos aprender a conocer lo que eres y lo que serás algún día para toda la humanidad, por medio de Jesucristo el Señor. Amén.</string>
    <string name="dia4">Por eso yo, que estoy preso por la causa del Señor, les ruego que vivan de una manera digna del llamamiento que han recibido, siempre humildes y amables, pacientes, tolerantes unos con otros en amor. Esfuércense por mantener la unidad del Espíritu mediante el vínculo de la paz. Efesios 4:1-3

Amado Padre que estás en el cielo, te damos gracias por las bendiciones que nos das en la tierra, ya que es por medio de tus dones y obra, y por la obra de tus hijos, que podemos creer y ser salvos. Protégenos aquí en nuestro hogar. Que con amor seamos tolerantes unos con otros, y que no escatimemos ningún esfuerzo para mantener la unidad del Espíritu en el vínculo de la paz. Concédenos nuevas fuerzas y nuevos dones dondequiera que los necesitemos en el camino que nos has preparado. Concédenos regocijarnos y confiar en ti hasta alcanzar la meta. Amén.</string>
    <string name="dia5">—Señor —contestó Simón Pedro—, ¿a quién iremos? Tú tienes palabras de vida eterna. Y nosotros hemos creído, y
        sabemos que tú eres el Santo de Dios. Juan 6:68-69\n

Amado Padre que estás en el cielo, venimos a ti buscando comunión contigo, porque sabemos que toda vida proviene de ti, todo progreso entre nosotros depende de ti, y nuestro ser interior puede ser fortalecido por tu Espíritu. Protégenos y renueva nuestra fortaleza una y otra vez, para que se haga tu voluntad entre nosotros y todos podamos encontrar valor para nuestras vidas, aun cuando nos amenazan muchas dificultades. Concédenos permanecer como tus siervos y andar con alegría para esperar lo que viene. Bendícenos hoy y cada día conforme a tus promesas. Amén.</string>
    <string name="dia6">He disipado tus transgresiones como el rocío, y tus pecados como la bruma de la mañana. Vuelve a mí, que te he
        redimido. Isaías 44:22\n\n

Señor nuestro Dios, te damos gracias por establecernos sobre el firme fundamento de tu Palabra y tu promesa, una promesa que expresa el gran anhelo y la esperanza que está en el corazón de tanta gente. Porque ellos no quieren que sus vidas queden en la desgracia y la superficialidad, sino que aspiran hacia algo más alto, con la alegría de que se pueda cumplir en ellos la promesa. Así que nosotros también hoy queremos estar preparados para el tiempo venidero que traerás, y nos llenamos de júbilo en nuestra esperanza del futuro. Nos regocijamos en la expectación del tiempo, cuando nos darás tu Espíritu, a nosotros y a todos los que responden a tu llamado y se convierten en tus colaboradores. Amén.</string>
    <string name="dia7">Mientras tienen la luz, crean en ella, para que sean hijos de la luz. Juan 12:36a\n\n

Amado Padre que estás en el cielo, como hijos tuyos venimos ante tu presencia, para que nos guíes con la luz que irradia de ti. Venimos a tu luz, buscando un nacimiento interior para que nos convierta en lo que deben ser tus hijos. Bendícenos al darte gracias por toda la bondad y la ayuda poderosa que nos has dado a muchos de nosotros. Acepta las gracias que te ofrecemos, y ayúdanos a nunca olvidarnos del bien que haces por nosotros. Ayúdanos a seguir adelante, siempre adelante, hasta la consumación de tu reino. Que no sea en vano que vivamos para el Señor Jesús y con amor a ti, el Dios y Padre de todos. Que no sea en vano traer nuestras oraciones y peticiones, para que pronto venga tu reino. ¡Sí, ven Señor Jesús! Ven pronto a esta tierra, para que toda la gente pueda reconocer al Dios verdadero y te puedan amar. Amén.</string>
    <string name="dia8">No hagan nada por egoísmo o vanidad; más bien, con humildad consideren a los demás como superiores a ustedes mismos. Cada uno debe velar no sólo por sus propios intereses sino también por los intereses de los demás. La actitud de ustedes debe ser como la de Cristo Jesús. Filipenses 2:3-5

Señor nuestro Dios, venimos ante ti en el grandioso nombre de Jesucristo. Te agradecemos que mientras vivamos todavía en la tierra, tú nos das esperanza y alegría en este gran nombre. Que por medio de tu Espíritu nazca algo dentro de nosotros, y nos volvamos de una sola mente con Jesucristo. En todas nuestras relaciones con los demás, que aprendamos que es mejor someternos con paciencia que dominar; mejor servir que gobernar, mejor ser el más débil que oprimir a otros. Danos esta actitud, para que se manifieste en muchos y se hagan cristianos, no solo en sus palabras y pensamientos, sino cristianos de corazón, amando a sus prójimos en unidad con el Salvador, en cada paso del camino. Amén.</string>
    <string name="dia9">Porque donde dos o tres se reúnen en mi nombre, allí estoy yo en medio de ellos. Mateo 18:20\n\n

Señor nuestro Dios y Padre, te alabamos porque nos permites tener juntos comunidad en el nombre de Jesús, quien nos ha abierto los ojos para verte, y quien ha prometido estar entre nosotros cuando nos reunimos en su nombre. Que nuestro corazón permanezca libre de sombras, aun cuando nuestras vidas se vuelvan difíciles y el futuro parezca sombrío. Protégenos siempre que nos encontremos en tentación y tengamos batallas que luchar. Libéranos; haz de nosotros personas libres, que entienden que te pertenecen, y que, mientras aún estemos en la tierra, nos permitas participar en la vida eterna. Amén.</string>
    <string name="bt_como_leer_la_biblia">Como Leer la Bilblia</string>
    <string name="cuento1_EL_ARCA_DE_NOe">El Arca de Noé</string>
    <string name="cuento2_EL_REY_SALOMÓN_Reyes_3">El Rey Salomón</string>
    <string name="cuento3_JONÁS_Y_EL_GRANPEZ">Jonas y el gran Pez</string>
    <string name="cuento4_LA_CREACIÓN">La Creacion</string>
    <string name="cuento5_JOSE_EL_ESCLAVO_Génesis_39_41">Jose el Esclavo</string>
    <string name="cuento6_EL_HIJO_PRÓDIGO">El Hijo Prodigo</string>
    <string name="cuento7_DAVID_Y_GOLIAT">David y Goliat</string>
    <string name="cuento8_Los_Diez_Mandamientos">Los Diez Mandamientos</string>
    <string name="cuento9_Los_Reyes_Magos">Los Reyes Magos</string>
    <string name="cuento10_El_Primer_milagrode_Jesús">El Primer milagro de Jesús</string>
    <string name="cuento11_Sanson">Sansón</string>
    <string name="cuento12_El_Mar_Rojo">El Mar Rojo</string>
    <string name="cuento13_Sodoma_y_Gomorra">Sodoma y Gomorra</string>
    <string name="cuento14_Las_Plagas_de_Egipto">Las Plagas de Egipto</string>
    <string name="cuento15_Jesús_elige_a_sus_discípulos">Jesús elige a sus discípulos</string>
    <string name="titulo_cuentos_infantiles">Los Mejores Cuentos Infantiles</string>
    <string name="titulo_33_milagros">Milagros de Jesús</string>
    <string name="titulo_milagro1">1 Jesús convierte el agua en vino</string>
    <string name="titulo_milagro2">2 La curación del hombre con un espíritu inmundo</string>
    <string name="titulo_milagro3">3 Jesús sana a la suegra de Pedro </string>
    <string name="titulo_milagro4">4 Milagro de los peces</string>
    <string name="titulo_milagro5">5 La curación de un leproso</string>
    <string name="titulo_milagro6">6 La curación de un paralítico</string>
    <string name="titulo_milagro7">7 Jesús resucita al hijo de la viuda de naín</string>
    <string name="titulo_milagro8">8 La curación de dos ciegos</string>
    <string name="titulo_milagro9">9 La curación de un mudo endemoniado</string>
    <string name="titulo_milagro10">10 La curación del ciego de nacimiento</string>
    <string name="titulo_milagro11">11 Jesús resucita a Lázaro</string>
    <string name="titulo_milagro12">12 La curación de un sordomudo</string>
    <string name="titulo_milagro13">13 Jesús calma la tempestad </string>
    <string name="titulo_milagro14">14 Jesús anda sobre el mar</string>
    <string name="titulo_milagro15">15 Las curaciones junto al mar</string>
    <string name="guia1">1- Comienza tu estudio pidiendo la ayuda de Dios</string>
    <string name="guia2">2- No es necesario comenzar a leer desde el principio</string>
    <string name="guia3">3- Escoge un tema que sea de interés para ti</string>
    <string name="guia4">4- Conoce un personaje</string>
    <string name="guia5">5- Toma nota de lo que aprendas</string>
    <string name="guia6">6- Escucha la Biblia en línea</string>
    <string name="guia7">7- Lee o comparte con otras personas</string>
    <string name="guia8">8- Investiga lo que no comprendas</string>
    <string name="guia9">9- Haz una pausa y escucha</string>
    <string name="guia10">10- No te desanimes</string>
    <string name="titulo_generador_de_versiculo">Generador de Versiculo</string>
    <string name="generar_versiculos">Encomienda al Señor tu camino; confía en él, y él actuará.\n
(Salmo 37:5)</string>
    <string name="btn_generar_versiculo">Generar Versiculo</string>
    <string name="leer_bible">Leer Biblia</string>
</resources>