<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    tools:context=".Milagros_de_Jesus33">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-1008936073037880~2998391099"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/titulo_33_milagros"
        android:layout_width="413dp"
        android:layout_height="52dp"
        android:text="@string/titulo_33_milagros"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="417dp"
        android:layout_height="625dp"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_33_milagros">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/milagro1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_milagro1" />

            <Button
                android:id="@+id/milagro2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_milagro2" />

            <Button
                android:id="@+id/milagro3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_milagro3" />

            <Button
                android:id="@+id/milagro4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_milagro4" />

            <Button
                android:id="@+id/milagro5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_milagro5" />

            <Button
                android:id="@+id/milagro6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_milagro6" />

            <Button
                android:id="@+id/milagro7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_milagro7" />

            <Button
                android:id="@+id/milagro8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_milagro8" />

            <Button
                android:id="@+id/milagro9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_milagro9" />

            <Button
                android:id="@+id/milagro10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_milagro10" />

            <Button
                android:id="@+id/milagro11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_milagro11" />

            <Button
                android:id="@+id/milagro12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_milagro12" />

            <Button
                android:id="@+id/milagro13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_milagro13" />

            <Button
                android:id="@+id/milagro14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_milagro14" />

            <Button
                android:id="@+id/milagro15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_milagro15" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>