<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_degradado"
    tools:context=".Vida_Jesus_de_Nazaret">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/titulo_generador_de_versiculo"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewjesmilagro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-1008936073037880/3601854301"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/text_versiculo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/generar_versiculos"
        android:scrollbars="vertical"
        android:textAlignment="center"
        android:textColorHint="#004D40"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_generar_versiculo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_generar_versiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_generar_versiculo"

        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/adViewjesmilagro"
        app:layout_constraintEnd_toStartOf="@+id/bt_compartir_GenVer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_versiculo" />

    <ImageButton
        android:id="@+id/bt_compartir_GenVer"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_baseline_share_24"


        app:layout_constraintBottom_toTopOf="@+id/adViewjesmilagro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_generar_versiculo"
        app:layout_constraintTop_toBottomOf="@+id/text_versiculo"
        app:layout_constraintVertical_bias="0.509"
        app:srcCompat="@drawable/ic_baseline_share_24"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>